release 1.13
- Fixed issue 1064
  http://java.net/jira/browse/JERSEY-1064
  Checking for null in OAuthSignature.addParam() to avoid NPE's when query parameters don't have values.
- Grizzly 2 version update (to 2.2.4)
- Fixed issue 880
  http://java.net/jira/browse/JERSEY-880
  com.sun.jersey.config.property.WebPageContentRegex parameter fails on a Websphere Application Server.
- Fixed issue 1055
  http://java.net/jira/browse/JERSEY-1055
  Fix vulnerable sample of code in documentation
- Fixed issue 797
  http://java.net/jira/browse/JERSEY-797
  HttpRequestContext.getAcceptableMediaType() Javadoc should specify alternatives
- Fixed issue 780
  http://java.net/jira/browse/JERSEY-780
  Malformed URL returns a 500 instead of a 400
- Fixed issue 843
  http://java.net/jira/browse/JERSEY-843
  Some javadoc links are broken
- Fixed issue 1000
  http://java.net/jira/browse/JERSEY-1000
  Improvement suggestions for https-server-glassfish sample
- Fixed issue 670
  http://java.net/jira/browse/JERSEY-670
  jacksonjsonprovider sample improvement requests
- Fixed issue 1014
  http://java.net/jira/browse/JERSEY-1014
  Null Pointer Exception when resources are not found
- Fixed issue 1003
  http://java.net/jira/browse/JERSEY-1003
  Adjusted log level in FieldDescriptor class
- Fixed issue 752
  http://java.net/jira/browse/JERSEY-752
  Exported packages in manifest don't have versions
- Added SubjectSecurityContext to enable subject-based security
  *Added getSecurityContext() method to ContainerRequest*
- Fixed issue 988
  http://java.net/jira/browse/JERSEY-988
  Applied patch which tries to find/access non-public constructor for JAXB beans
  while generating XML Schema to be included in WADL.
- Fixed issue 964
  http://java.net/jira/browse/JERSEY-964
  Making *WebResource.Builders not final to make mocking possible.
- Fixed issue 985
  http://java.net/jira/browse/JERSEY-985
  Non-blocking client now takes ssl settings (via HTTPSPropertins) into account.

release 1.12 (02-2012)