@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 2010-2011 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010-2012 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -49,11 +49,13 @@ import javax.ws.rs.Path;
 import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.UriBuilder;
 import javax.ws.rs.core.UriBuilderException;
+import com.sun.jersey.core.util.MultivaluedMapImpl;
 
 /**
  * An implementaton of {@link UriBuilder}.
  *
- * @author Paul.Sandoz@Sun.Com
+ * @author Paul Sandoz
+ * @author Martin Matula (martin.matula at oracle.com)
  */
 public class UriBuilderImpl extends UriBuilder {
 
@@ -78,11 +80,14 @@ public class UriBuilderImpl extends UriBuilder {
     private UriBuilderImpl(UriBuilderImpl that) {
         this.scheme = that.scheme;
         this.ssp = that.ssp;
+        this.authority = that.authority;
         this.userInfo = that.userInfo;
         this.host = that.host;
         this.port = that.port;
         this.path = new StringBuilder(that.path);
+        this.matrixParams = that.matrixParams == null ? null : new MultivaluedMapImpl(that.matrixParams);
         this.query = new StringBuilder(that.query);
+        this.queryParams = that.queryParams == null ? null : new MultivaluedMapImpl(that.queryParams);
         this.fragment = that.fragment;
     }
 
